added correct css and logic on refresh , session storage implementation

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -2,7 +2,7 @@
     <div class="button-wrapper">
         <button (click)="addList()" class="add-btn">Add List</button>
     </div>
-    <div class="list-wrpper">
+    <div class="list-wrapper">
         <app-list *ngFor="let list of listArray" [list]="list"></app-list>
     </div>
 </div>
