--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -7,7 +7,7 @@
   .list-header {
     display: flex;
     background: #A0B8CB;
-    padding: 12px;
+    padding-top: 6px;
     border-bottom: 2px solid;
     .list__title {
       text-align: center;
@@ -20,10 +20,13 @@
     height: 28px;
     padding: 0px 12px;
     cursor: pointer;
-    background-color: #3d768f;
+    background-color: #ef6363;
     border-radius: 7px;
   }
   .add-btn {
-    
+    position: absolute;
+    bottom: 2%;
+    margin-left: 12%;
+    background-color: #3d768f;
   }
 }
