--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,5 +1,21 @@
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; /* 5px rounded corners */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  margin: 5px;
+  border-radius: 5px; /* 5px rounded corners */
+  .btn-wrapper{
+      display: flex;
+      justify-content: flex-end;
+    .dlt-btn {
+        border: none;
+        color: white;
+        height: 28px;
+        padding: 0px 12px;
+        cursor: pointer;
+        background-color: #ef6363;
+        border-radius: 7px;
+        margin-top: 5px;
+      }
+  }
+ 
 }
