--- a/src/app/components/modal/modal.component.scss
+++ b/src/app/components/modal/modal.component.scss
@@ -20,5 +20,8 @@
       border-radius: 15px !important;
       margin-top: 12px;
     }
+    .card-title{
+        margin-bottom:10px;
+    }
   }
   
